--- a/sass/partials/_contact.scss
+++ b/sass/partials/_contact.scss
@@ -67,6 +67,10 @@
 
     .form_input{
         height: 4rem;
+        font-family: "mySecondFont";
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+        color:  #2C3238;
     }
 
     .form_textarea{
