--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ header .nav_bootstrap .btn_logo {
   margin-top: 0;
 }
 header .nav_bootstrap .navbar-nav {
-  padding-top: 2rem;
+  padding-top: rem;
   width: 100%;
 }
 header .nav_bootstrap .navbar-nav .nav-link {
@@ -217,19 +217,8 @@ header .nav_bootstrap .btn-burger {
     height: 10rem;
   }
   .navbar-nav {
-    height: 80vh;
-  }
-  .li--light, header .nav_bootstrap .navbar-nav .li--light--active {
-    padding-top: 2rem;
-  }
-  .li--light--active {
-    padding-top: 2rem;
-  }
-  .li--dark, header .nav_bootstrap .navbar-nav .li--dark--active {
-    padding-top: 2rem;
-  }
-  .li--dark--active {
-    padding-top: 2rem;
+    height: 90vh;
+    padding-bottom: 15rem;
   }
 }
 @media screen and (min-width: 991px) {
@@ -410,7 +399,7 @@ header .nav_bootstrap .btn_logo {
   margin-top: 0;
 }
 header .nav_bootstrap .navbar-nav {
-  padding-top: 2rem;
+  padding-top: rem;
   width: 100%;
 }
 header .nav_bootstrap .navbar-nav .nav-link {
@@ -465,19 +454,8 @@ header .nav_bootstrap .btn-burger {
     height: 10rem;
   }
   .navbar-nav {
-    height: 80vh;
-  }
-  .li--light, header .nav_bootstrap .navbar-nav .li--light--active {
-    padding-top: 2rem;
-  }
-  .li--light--active {
-    padding-top: 2rem;
-  }
-  .li--dark, header .nav_bootstrap .navbar-nav .li--dark--active {
-    padding-top: 2rem;
-  }
-  .li--dark--active {
-    padding-top: 2rem;
+    height: 90vh;
+    padding-bottom: 15rem;
   }
 }
 @media screen and (min-width: 991px) {
@@ -574,30 +552,78 @@ a {
   padding-bottom: 20rem;
 }
 
-/*-----------------------------*/
-.about_main_section_details {
-  padding-bottom: 3rem;
-}
-
-.about_main_card--default {
-  width: 400px;
-  height: 400px;
+/*----------ACCORDION-------------------*/
+.bg--yellow {
   background-color: #FFE500;
-  border-radius: 30px;
-  padding-top: 5rem;
 }
 
-.about_main_card--hover {
-  width: 400px;
-  height: 400px;
-  border-radius: 30px;
-  padding-top: 5rem;
-  background-color: #2C3238;
+.about_accordion {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.about_accordion-item {
+  color: #FFE500;
+  background-color: #FFE500;
+  border: 2px solid #2C3238;
+  border-radius: 10px;
+  padding: 2rem;
+}
+
+.about_accordion-button {
+  width: 100%;
+  padding-top: 2rem;
+  border: none;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  box-shadow: 4px 4px 4px 0px rgba(58, 58, 58, 0.1);
+}
+
+.about_accordion-button:not(.collapsed) {
+  width: 100%;
+}
+
+.about_accordion-body {
+  width: 100%;
+}
+
+.p_about_section1_card {
+  font-family: "mySecondFont";
+  font-size: 1.6rem;
+  line-height: 3rem;
+  color: #2C3238;
+  text-align: left;
+  padding-top: 2rem;
+  width: 100%;
+}
+
+.about_accordion {
+  --bs-accordion-color: transparent;
+  --bs-accordion-bg: transparent;
+  --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
+  --bs-accordion-border-color: transparent;
+  --bs-accordion-border-width: ;
+  --bs-accordion-border-radius: ;
+  --bs-accordion-inner-border-radius: ;
+  --bs-accordion-btn-padding-x: ;
+  --bs-accordion-btn-padding-y: ;
+  --bs-accordion-btn-color: ;
+  --bs-accordion-btn-bg: ;
+  --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23212529"%3e%3cpath fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/%3e%3c/svg%3e);
+  --bs-accordion-btn-icon-width: 2rem;
+  --bs-accordion-btn-icon-transform: rotate(-180deg);
+  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+  --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23052c65"%3e%3cpath fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/%3e%3c/svg%3e);
+  --bs-accordion-btn-focus-border-color: #FFE500;
+  --bs-accordion-btn-focus-box-shadow: ;
+  --bs-accordion-body-padding-x: 1.25rem;
+  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-active-color: ;
+  --bs-accordion-active-bg: #FFE500;
 }
 
 /*-----------------------------*/
@@ -657,15 +683,6 @@ a {
   line-height: 2.5rem;
 }
 
-.p_about_section1_card {
-  font-family: "mySecondFont";
-  font-size: 1.8rem;
-  line-height: 3.5rem;
-  width: 350px;
-  color: #F0F0F0;
-  text-align: center;
-}
-
 .h3_about {
   font-family: "myFirstFont-alt";
   font-size: 4rem;
@@ -691,7 +708,7 @@ a {
 .h2_about_card {
   font-family: "myFirstFont-bold";
   font-size: 8rem;
-  line-height: 10rem;
+  line-height: 8rem;
   letter-spacing: 1rem;
   text-align: center;
   -webkit-text-stroke: 0.01rem #2C3238;
@@ -752,7 +769,6 @@ a {
   .p_about_section1_card {
     font-size: 1.6rem;
     line-height: 3rem;
-    width: 300px;
   }
   .about_main_section2_card {
     display: flex;
@@ -799,7 +815,6 @@ a {
   .p_about_section1_card {
     font-size: 1.6rem;
     line-height: 2.6rem;
-    width: 280px;
   }
   .about_main_section2_card {
     display: flex;
@@ -811,6 +826,11 @@ a {
     line-height: 4rem;
     letter-spacing: 0.5rem;
     padding-top: 2rem;
+  }
+  .h2_about_card {
+    font-size: 7rem;
+    line-height: 8rem;
+    letter-spacing: 0.5rem;
   }
   .p_about_section2 {
     font-size: 1.7rem;
@@ -845,6 +865,14 @@ a {
     flex-direction: row;
     padding-bottom: 5rem;
   }
+  .h2_about_card {
+    font-size: 12rem;
+    line-height: 13rem;
+    letter-spacing: 1rem;
+  }
+  .about_accordion-item {
+    margin-bottom: 2rem;
+  }
 }
 @media only screen and (max-width: 768px) {
   .about_main_frame_card {
@@ -874,6 +902,9 @@ a {
   .about_main_section_img {
     display: none;
   }
+  .about_accordion-item {
+    margin-bottom: 2rem;
+  }
 }
 @media only screen and (max-width: 576px) {
   .about_main_frame_card {
@@ -894,9 +925,8 @@ a {
     height: 300px;
   }
   .p_about_section1_card {
-    font-size: 1.4rem;
-    line-height: 2.2rem;
-    width: 240px;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
   }
   .h5_about {
     font-size: 2rem;
@@ -904,8 +934,8 @@ a {
     width: 240px;
   }
   .h2_about_card {
-    font-size: 6rem;
-    line-height: 8rem;
+    font-size: 10rem;
+    line-height: 12rem;
     letter-spacing: 0.5rem;
   }
   .h2_about {
@@ -1086,35 +1116,38 @@ a {
 .careers_main_container .careers_main_section2 {
   padding-top: 10rem;
 }
-.careers_main_container .careers_main_section2 .accordion {
+.careers_main_container .careers_main_section2 .careers_accordion {
   background: transparent;
 }
-.careers_main_container .careers_main_section2 .accordion-item {
+.careers_main_container .careers_main_section2 .careers_accordion-item {
   background-color: #2C3238;
   border: none;
   margin-bottom: 2rem;
 }
-.careers_main_container .careers_main_section2 .accordion-body {
+.careers_main_container .careers_main_section2 .careers_accordion-body {
   background-color: #2C3238;
-  outline: none;
-  border: none;
+  padding-bottom: 2rem;
 }
-.careers_main_container .careers_main_section2 .accordion-header {
+.careers_main_container .careers_main_section2 .p_accordion {
+  font-family: "mySecondFont";
+  font-size: 1.8rem;
+  line-height: 2.8rem;
+  color: #2C3238;
+  text-align: left;
+  padding-left: 2rem;
+  padding-bottom: 2rem;
+}
+.careers_main_container .careers_main_section2 .careers_accordion-button {
   border-radius: 12px;
-  outline: 1px solid #F3f6f0;
-  height: 7rem;
-}
-.careers_main_container .careers_main_section2 .accordion-button {
+  border: 1px solid #F3f6f0;
   background: transparent;
   margin-top: 0;
   padding-top: 2rem;
-  outline: none;
-  border: none;
+  width: 100%;
   height: 7rem;
-  border-radius: 12px;
   margin-bottom: 2rem;
 }
-.careers_main_container .careers_main_section2 .accordion-button :focus {
+.careers_main_container .careers_main_section2 .careers_accordion-button :focus {
   background: transparent;
   color: #F3F6F0;
   margin-top: 0;
@@ -1122,7 +1155,7 @@ a {
   outline: none;
   border: none;
 }
-.careers_main_container .careers_main_section2 .accordion-button:not(.collapsed) {
+.careers_main_container .careers_main_section2 .careers_accordion-button:not(.collapsed) {
   background: transparent;
   color: #F3F6F0;
   margin-top: 0;
@@ -1247,6 +1280,10 @@ a {
 }
 .contact_main_section2 .form_input {
   height: 4rem;
+  font-family: "mySecondFont";
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  color: #2C3238;
 }
 .contact_main_section2 .form_textarea {
   height: 8rem;
