--- a/sass/partials/_careers.scss
+++ b/sass/partials/_careers.scss
@@ -78,37 +78,40 @@
     .careers_main_section2{
         padding-top: 10rem;
 
-        .accordion{
+        .careers_accordion{
             background: transparent;
         }
 
-        .accordion-item{
+        .careers_accordion-item{
             background-color: #2C3238;
             border: none;
             margin-bottom: 2rem;
         }
 
-        .accordion-body{
+        .careers_accordion-body{
             background-color: #2C3238;
-            outline: none;
-            border: none;
+            padding-bottom: 2rem;
+
         }
 
-        .accordion-header{
+        .p_accordion{
+            font-family: "mySecondFont";
+            font-size: 1.8rem;
+            line-height: 2.8rem;
+            color:  #2C3238;
+            text-align: left;
+            padding-left: 2rem;
+            padding-bottom: 2rem;
+        }
+
+        .careers_accordion-button{
             border-radius: 12px;
-            outline: 1px solid #F3f6f0;
-            height: 7rem;
-            
-        }
-
-        .accordion-button{
+            border: 1px solid #F3f6f0;
             background: transparent;
             margin-top: 0;
             padding-top: 2rem;
-            outline: none;
-            border: none;
-            height: 7rem;
-            border-radius: 12px;
+            width: 100%;
+            height: 7rem;          
             margin-bottom: 2rem;
             & :focus{
                 background: transparent;
@@ -171,6 +174,8 @@
     color: #F0F0F0;
     text-align: left;
 }
+
+
 
 /*CAREERS responsive*/
 
