--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 *{
     padding: 0;
     margin:0;
+    border:1px solid red !important;
 }
 
 
@@ -33,7 +34,11 @@
 
 html{
     font-size: 62.5%;
+    
 }
 
+.body{
+    overflow-x: hidden;
+}
 
 
