--- a/css/style.css
+++ b/css/style.css
@@ -535,10 +535,11 @@ a {
 
 .about_main_container {
   width: 90%;
-  overflow: hidden;
+  overflow-x: hidden;
   padding-top: 5rem;
 }
 .about_main_container .about_main_section1 {
+  overflow-x: hidden;
   margin-bottom: 10rem;
 }
 .about_main_container .about_main_section2,
@@ -546,9 +547,11 @@ a {
 .about_main_container .about_main_section4,
 .about_main_container .about_main_section5,
 .about_main_container .about_main_section6 {
+  overflow-x: hidden;
   padding-top: 10rem;
 }
 .about_main_container .about_main_section6 {
+  overflow-x: hidden;
   padding-bottom: 20rem;
 }
 
@@ -763,15 +766,6 @@ a {
 
 /*ABOUT responsive*/
 @media only screen and (min-width: 1201px) and (max-width: 1400px) {
-  .about_main_card--default {
-    width: 350px;
-    height: 350px;
-  }
-  .about_main_card--hover {
-    width: 350px;
-    height: 350px;
-    padding-top: 4rem;
-  }
   .p_about_section1_card {
     font-size: 1.6rem;
     line-height: 3rem;
@@ -792,15 +786,6 @@ a {
     line-height: 2.7rem;
   }
 }
-@media only screen and (min-width: 1201px) {
-  .about_main_card--default {
-    position: absolute;
-    transition: 5s;
-  }
-  .about_main_card--default:hover {
-    display: none;
-  }
-}
 @media only screen and (min-width: 769px) and (max-width: 1200px) {
   .about_main_frame_card {
     display: flex;
@@ -808,15 +793,6 @@ a {
     justify-content: center;
     align-items: center;
     margin-bottom: 5rem;
-  }
-  .about_main_card--default {
-    margin-right: 5rem;
-    width: 350px;
-    height: 350px;
-  }
-  .about_main_card--hover {
-    width: 350px;
-    height: 350px;
   }
   .p_about_section1_card {
     font-size: 1.6rem;
@@ -920,16 +896,6 @@ a {
     align-items: center;
     margin-bottom: 5rem;
   }
-  .about_main_card--default {
-    width: 280px;
-    height: 280px;
-    margin-bottom: 5rem;
-    padding-top: 3rem;
-  }
-  .about_main_card--hover {
-    width: 280px;
-    height: 300px;
-  }
   .p_about_section1_card {
     font-size: 1.6rem;
     line-height: 2.6rem;
@@ -959,7 +925,7 @@ a {
     line-height: 3.5rem;
   }
   .about_yellowstroke {
-    width: 280px;
+    width: 80%;
   }
   .p_about_section3 {
     font-size: 1.5rem;
@@ -1536,6 +1502,7 @@ p {
 * {
   padding: 0;
   margin: 0;
+  border: 1px solid red !important;
 }
 
 @font-face {
@@ -1552,6 +1519,10 @@ p {
 }
 html {
   font-size: 62.5%;
+}
+
+.body {
+  overflow-x: hidden;
 }
 
 /*# sourceMappingURL=style.css.map */
